testsuite/negative/anonymous-classes-2.n
using Nemerle.Extensions;

module Program {

    Main() : void {
        def _x  = new( // W: Anonymous class contains too many fields to be convertible to tuple
            f1 = 1, f2 = 2, f3 = 3, f4 = 4, f5 = 5, f6 = 6, f7 = 7, f8 = 8, f9 = 9, f10 = 10,
            f11 = 1, f12 = 2, f13 = 3, f14 = 4, f15 = 5, f16 = 6, f17 = 7, f18 = 8, f19 = 9, f20 = 10,
            f21 = 1, f22 = 2, f23 = 3, f24 = 4, f25 = 5, f26 = 6, f27 = 7, f28 = 8, f29 = 9, f30 = 10);
    }

}